Fix overlap at some screen sizes when drafts number is two digits

--- a/client/assets/stylesheets/_nav-unification.scss
+++ b/client/assets/stylesheets/_nav-unification.scss
@@ -100,7 +100,7 @@
 	.masterbar__item-new,
 	.masterbar__toggle-drafts.button.is-borderless {
 		height: 24px;
-		margin: 4px 6px 4px 8px;
+		margin: 4px 8px;
 		/* stylelint-disable-next-line scales/radii */
 		border-radius: 5px;
 	}
